Keep blocklist recovery tests Java 8 compatible